--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DBStringConnection": "Server=(localdb)\\mssqllocaldb;Database=PatientRecordDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
+
 }
