--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DBStringConnection": "Server=(localdb)\\mssqllocaldb;Database=PatientRecordDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DBStringConnection": "Server=(localdb)\\MSSQLLocalDB;Database=PatientRecordDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
-
 }
